(Add Vul: Struts2) s2-001､s2-007､s2-008､s2-012､s2-013､s2-015､s2-016

--- a/_posts/2017-06-13-s_struts2_s2-019.md
+++ b/_posts/2017-06-13-s_struts2_s2-019.md
@@ -15,6 +15,12 @@ twitter_text: 'Struts2 远程代码执行漏洞(S2-019)环境'
 introduction: 'Struts2 远程代码执行漏洞(S2-019)环境'
 ---
 
+<style type="text/css">
+.highlight pre{
+  white-space: pre-wrap;
+}    
+</style>
+
 ### 漏洞信息
 
  * [S2-019 公告](http://struts.apache.org/docs/s2-019.html)
