--- a/_posts/2017-06-13-s_struts2_s2-029.md
+++ b/_posts/2017-06-13-s_struts2_s2-029.md
@@ -14,7 +14,11 @@ categories:
 twitter_text: 'Struts2 远程代码执行漏洞(S2-029)环境'
 introduction: 'Struts2 远程代码执行漏洞(S2-029)环境'
 ---
-
+<style type="text/css">
+.highlight pre{
+  white-space: pre-wrap;
+}    
+</style>
 ### 漏洞信息
 
  * [S2-029 公告](http://struts.apache.org/docs/s2-029.html)
