(Update Doc: highlight) 代码高亮

--- a/_posts/2017-06-28-f_ffmpeg_1.md
+++ b/_posts/2017-06-28-f_ffmpeg_1.md
@@ -35,12 +35,12 @@ HTTP 端口 | 80
 ### 获取环境:
 
 1. 拉取镜像到本地
- ```
+ ```bash
 $ docker pull medicean/vulapps:f_ffmpeg_1
  ```
 
 2. 启动环境
- ```
+ ```bash
 $ docker run -d -p 8000:80 medicean/vulapps:f_ffmpeg_1
  ```
  > `-p 8000:80` 前面的 8000 代表物理机的端口，可随意指定。 
@@ -58,7 +58,7 @@ $ docker run -d -p 8000:80 medicean/vulapps:f_ffmpeg_1
 
 1.生成特殊的视频文件
 
-```
+```bash
 $ python3 gen_xbin_avi.py file:///etc/passwd passwd.avi
 ```
 
