--- a/_posts/2017-07-14-n_nginx_1.md
+++ b/_posts/2017-07-14-n_nginx_1.md
@@ -41,12 +41,12 @@ Nginx version 1.13.3, 1.12.1
 ### 获取环境:
 
 1. 拉取镜像到本地
- ```
+ ```bash
 $ docker pull medicean/vulapps:n_nginx_1
  ```
 
 2. 启动环境
- ```
+ ```bash
 $ docker run -d -p 8000:80 medicean/vulapps:n_nginx_1
  ```
  > `-p 8000:80` 前面的 8000 代表物理机的端口，可随意指定。 
