--- a/_posts/2017-08-13-s_ssh_1.md
+++ b/_posts/2017-08-13-s_ssh_1.md
@@ -36,12 +36,12 @@ HTTP 端口 | 80
 ### 获取环境:
 
 1. 拉取镜像到本地
- ```
+ ```bash
 $ docker pull medicean/vulapps:s_ssh_1
  ```
 
 2. 启动环境
- ```
+ ```bash
 $ docker run -d -p 8000:80 medicean/vulapps:s_ssh_1
  ```
  > `-p 8000:80` 前面的 8000 代表物理机的端口，可随意指定。 
