--- a/_posts/2017-09-06-s_struts2_s2-052.md
+++ b/_posts/2017-09-06-s_struts2_s2-052.md
@@ -14,7 +14,11 @@ categories:
 twitter_text: 'Struts2 XStreamHandler 远程代码执行漏洞(S2-052､ CVE-2017-9805)环境'
 introduction: 'Struts2 XStreamHandler 远程代码执行漏洞(S2-052､ CVE-2017-9805)环境'
 ---
-
+<style type="text/css">
+.highlight pre{
+  white-space: pre-wrap;
+}    
+</style>
 ### 漏洞信息
 
  * [S2-052 公告](https://cwiki.apache.org/confluence/display/WW/S2-052)
@@ -22,12 +26,12 @@ introduction: 'Struts2 XStreamHandler 远程代码执行漏洞(S2-052､ CVE-201
 ### 获取环境:
 
 1. 拉取镜像到本地
- ```
+ ```bash
 $ docker pull medicean/vulapps:s_struts2_s2-052
  ```
 
 2. 启动环境
- ```
+ ```bash
 $ docker run -d -p 80:8080 medicean/vulapps:s_struts2_s2-052
  ```
  > `-p 80:8080` 前面的 80 代表物理机的端口，可随意指定。 
@@ -42,7 +46,7 @@ $ docker run -d -p 80:8080 medicean/vulapps:s_struts2_s2-052
 
 执行 `/usr/bin/touch /tmp/vuln` 命令：
 
-```
+```http
 POST /orders;jsessionid=A82EAA2857A1FFAF61FF24A1FBB4A3C7 HTTP/1.1
 Host: 127.0.0.1:8080
 User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.12; rv:54.0) Gecko/20100101 Firefox/54.0
@@ -74,7 +78,7 @@ Upgrade-Insecure-Requests: 1
 1. 升级Apache struts 至 2.5.13 版本
 
 2. 如果系统没有使用Struts REST插件，那么可以直接删除Struts REST插件，或者在配置文件中加入如下代码，限制服务端文件的扩展名
- ```
+ ```xml
     <constant name="struts.action.extension" value="xhtml,,json" />
  ```
 
