--- a/_posts/2017-09-08-s_struts2_s2-053.md
+++ b/_posts/2017-09-08-s_struts2_s2-053.md
@@ -14,7 +14,11 @@ categories:
 twitter_text: 'Struts2 远程代码执行漏洞(S2-053)'
 introduction: 'Struts2 远程代码执行漏洞(S2-053)'
 ---
-
+<style type="text/css">
+.highlight pre{
+  white-space: pre-wrap;
+}    
+</style>
 ### 漏洞信息
 
  * [S2-053 公告](https://cwiki.apache.org/confluence/display/WW/S2-053)
@@ -22,12 +26,12 @@ introduction: 'Struts2 远程代码执行漏洞(S2-053)'
 ### 获取环境:
 
 1. 拉取镜像到本地
- ```
+ ```bash
 $ docker pull medicean/vulapps:s_struts2_s2-053
  ```
 
 2. 启动环境
- ```
+ ```bash
 $ docker run -d -p 80:8080 medicean/vulapps:s_struts2_s2-053
  ```
  > `-p 80:8080` 前面的 80 代表物理机的端口，可随意指定。 
