--- a/_posts/2017-09-12-j_jboss_1.md
+++ b/_posts/2017-09-12-j_jboss_1.md
@@ -43,12 +43,12 @@ JBOSS 端口 | 8080
 ### 获取环境:
 
 1. 拉取镜像到本地
- ```
+ ```bash
 $ docker pull medicean/vulapps:j_jboss_1
  ```
 
 2. 启动环境
- ```
+ ```bash
 $ docker run -d -p 8080:8080 medicean/vulapps:j_jboss_1
  ```
  > 8080 为 JBoss 管理端口
